examples/failing/NewtypeMultiArgs.purs
module Main where

newtype Thing = Thing String Boolean
